--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
@@ -18,10 +19,13 @@
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "recoil": "^0.5.2",
+    "sharp": "^0.29.3",
     "tailwind-scrollbar-hide": "^1.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "eslint": "^8.4.1",
+    "eslint-plugin-react": "^7.27.1",
     "postcss": "^8.3.5",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.4"
