--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "firebase": "^9.6.0",
     "moment": "^2.29.1",
     "next": "latest",
-    "next-auth": "4.0.2",
+    "next-auth": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
@@ -29,5 +29,19 @@
     "postcss": "^8.3.5",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.4"
-  }
+  },
+  "name": "instagram-clone",
+  "description": "This project is for learning purpose using React.js with - Next.js - Tailwind CSS - Firebase - NextAuth - Recoil",
+  "version": "1.0.0",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lynasty/instagram-clone.git"
+  },
+  "author": "Darwin",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Lynasty/instagram-clone/issues"
+  },
+  "homepage": "https://github.com/Lynasty/instagram-clone#readme"
 }
